[CI] Publish Documentation for 542583653bfed296827162c74860c046fce1a310 - 542583653bfed296827162c74860c046fce1a310 🚀

--- a/vp-workshop/main/consumingPatterns.html
+++ b/vp-workshop/main/consumingPatterns.html
@@ -640,7 +640,7 @@ Deploying the pattern through the OpenShift Console or via <code>pattern.sh</cod
 </div>
 </div>
 <div class="paragraph">
-<p>Without further configuration, common is acutally quite boring. So let&#8217;s add another layer!</p>
+<p>Without further configuration, common is actually quite boring. So let&#8217;s add another layer!</p>
 </div>
 <div class="paragraph">
 <p>Your specific industry or use-case is layered into the framework and utilizes the underlying common. In this example the solution includes a bespoke application, cloud-native cluster storage, Red Hat Advanced Cluster Security for Kubernetes, and an enterprise container registry. The framework will deploy and configure these components through Helm charts, kustomize manifests or Ansible if necessary.</p>
