--- a/vp-workshop/main/landscape.html
+++ b/vp-workshop/main/landscape.html
@@ -534,7 +534,7 @@
 <p>Whether VPs are only applicable for the vertical industry the demo was created to show</p>
 </li>
 <li>
-<p>How are they presented to custoemrs</p>
+<p>How are they presented to customers</p>
 </li>
 </ul>
 </div>
@@ -571,7 +571,7 @@
 <h2 id="_validated_patterns_website"><a class="anchor" href="#_validated_patterns_website"></a>Validated Patterns WebSite</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>The easiest and fastest way to find out what Validated Patterns are available and their availability is to check out the Validated Patterns webiste.</p>
+<p>The easiest and fastest way to find out what Validated Patterns are available and their availability is to check out the Validated Patterns website.</p>
 </div>
 <div id="website" class="paragraph">
 <p>Validated Patterns are an Open Source effort. Information about the Validated Patterns can be found on the <a href="https://validatedpatterns.io">Patterns Website</a>.</p>
