--- a/vp-workshop/main/patterns.html
+++ b/vp-workshop/main/patterns.html
@@ -576,7 +576,7 @@
 <h2 id="goals"><a class="anchor" href="#goals"></a>Business Goals</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Every organization is facing the need to transform itself into a digital business. It&#8217;s part of an evolution to help <strong>accelerate innovation</strong> by making application development faster - fueled with data insights, and enabled through technologies like containers, kubernetes and artifical intelligence/machine learning.</p>
+<p>Every organization is facing the need to transform itself into a digital business. It&#8217;s part of an evolution to help <strong>accelerate innovation</strong> by making application development faster - fueled with data insights, and enabled through technologies like containers, kubernetes and artificial intelligence/machine learning.</p>
 </div>
 <div class="paragraph">
 <p>In order to be successful, they know they must also look at how to be more <strong>operationally agile</strong> and <strong>efficient</strong> in order to quickly meet business needs. Hybrid-Cloud computing coupled with these new technologies is helping create new opportunities to achieve these goals.</p>
@@ -682,7 +682,7 @@ Reusability is a major theme that will be seen throughout this workshop.
 <p>Sales - don&#8217;t spend time architecting, they have a tested use ccase for a base deployment. Though messaged for a specific vertical in some cases, they can be used across other verticals.</p>
 </li>
 <li>
-<p>Partners - free use of a defined architecutre that you can build a solution on top of. All the value to accelerate sales/deployments.</p>
+<p>Partners - free use of a defined architecture that you can build a solution on top of. All the value to accelerate sales/deployments.</p>
 <div class="ulist">
 <ul>
 <li>
