--- a/vp-workshop/main/selfContained.html
+++ b/vp-workshop/main/selfContained.html
@@ -576,7 +576,7 @@
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>kubernetes manifests (.yaml)</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">They can either be coverted to a Helm chart, or the raw manifests can be placed in a directory under <code>charts/</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">They can either be converted to a Helm chart, or the raw manifests can be placed in a directory under <code>charts/</code></p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>kustomize manifests</code></p></td>
