--- a/vp-workshop/main/tiers.html
+++ b/vp-workshop/main/tiers.html
@@ -534,7 +534,7 @@
 </div>
 </li>
 <li>
-<p>Additional information on mainteance tiers and the pattern support policy</p>
+<p>Additional information on maintenance tiers and the pattern support policy</p>
 </li>
 </ul>
 </div>
@@ -623,7 +623,7 @@
 <p>functional on all currently supported/extended update support (EUS) versions of OpenShift</p>
 </li>
 <li>
-<p>must fix breakage in a timely mannger</p>
+<p>must fix breakage in a timely manner</p>
 </li>
 <li>
 <p>must document their support policy</p>
