--- a/vp-workshop/main/partners.html
+++ b/vp-workshop/main/partners.html
@@ -514,7 +514,7 @@
 <h2 id="_working_with_partners"><a class="anchor" href="#_working_with_partners"></a>Working with Partners</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Partners have taken notice of what Validated Patterns can bring to their organizations. In turn, they have had focused development cycles to deploy their product/features using the Validated Pattners framework. In the following sections we will discuss how a few of our partners have taken advantage of the Validated Patterns framework.</p>
+<p>Partners have taken notice of what Validated Patterns can bring to their organizations. In turn, they have had focused development cycles to deploy their product/features using the Validated Patterns framework. In the following sections we will discuss how a few of our partners have taken advantage of the Validated Patterns framework.</p>
 </div>
 </div>
 </div>
