--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<link rel="canonical" href="https://validatedpatterns.github.io/workshop/vp-workshop/main/index.html">
+<link rel="canonical" href="https://play.validatedpatterns.io/vp-workshop/main/index.html">
 <script>location="vp-workshop/main/index.html"</script>
 <meta http-equiv="refresh" content="0; url=vp-workshop/main/index.html">
 <meta name="robots" content="noindex">
 <title>Redirect Notice</title>
 <h1>Redirect Notice</h1>
-<p>The page you requested has been relocated to <a href="vp-workshop/main/index.html">https://validatedpatterns.github.io/workshop/vp-workshop/main/index.html</a>.</p>
+<p>The page you requested has been relocated to <a href="vp-workshop/main/index.html">https://play.validatedpatterns.io/vp-workshop/main/index.html</a>.</p>
