[CI] Publish Documentation for f1f92aa0d303099b3a2b6fa02f8a8e3275141671 - f1f92aa0d303099b3a2b6fa02f8a8e3275141671 🚀

--- a/vp-workshop/main/creatingPatterns.html
+++ b/vp-workshop/main/creatingPatterns.html
@@ -227,27 +227,23 @@
   </li>
 </ul>
   </li>
-</ul>
-  </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="0">
-<ul class="nav-list">
-  <li class="nav-item is-current-page" data-depth="1">
+  <li class="nav-item is-current-page" data-depth="2">
     <button class="nav-item-toggle"></button>
     <a class="nav-link" href="creatingPatterns.html">Creating a Validated Pattern</a>
 <ul class="nav-list">
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="#objectives">Topic Objectives</a>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="#common">Understanding Common</a>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="#creating">Creation Process</a>
   </li>
-  <li class="nav-item" data-depth="2">
+  <li class="nav-item" data-depth="3">
     <a class="nav-link" href="#exercises">Exercises</a>
+  </li>
+</ul>
   </li>
 </ul>
   </li>
@@ -403,7 +399,16 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
+    <button class="nav-item-toggle"></button>
     <a class="nav-link" href="multipleClusters.html">9. Working with Multiple Clusters</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="multipleClusters.html#objectives">Topic Objectives</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="multipleClusters.html">multipleClusters.adoc</a>
+  </li>
+</ul>
   </li>
 </ul>
   </li>
@@ -411,14 +416,68 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="additionalTopics.html">12. Additional Resources</a>
+    <a class="nav-link" href="additionalTopics.html">10. Additional Resources</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="#imperative.adoc">Imperative Framework</a>
+    <a class="nav-link" href="imperative.html">Imperative Framework</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="#imperative.adoc">Topic Objectives</a>
+    <a class="nav-link" href="imperative.html#objectives">Topic Objectives</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="imperative.html#versus">Imperative v. Declarative Actions</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="imperative.html#declaring">Declaring an imperative action</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="imperative.html#cron-example">Imperative cronJob example</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="clusterDomains.html">Handling Cluster Domains</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="clusterDomains.html#objectives">Topic Objectives</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="clusterDomains.html#limitations">Limitations</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="clusterDomains.html#variables">Variables set by the Pattern</a>
+  </li>
+</ul>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <a class="nav-link" href="multisource.html">Multi Source Patterns</a>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="multisource.html#objectives">Topic Objectives</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="multisource.html#meaning">What does it mean to use multisource?</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="multisource.html#how">How it works</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="multisource.html#status">Current Status</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="multisource.html#ux">User Experience</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="multisource.html#helmRepo">Helm Chart Repository</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="multisource.html#chart-release">Creating a chart release</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="multisource.html#next">Next Steps</a>
   </li>
 </ul>
   </li>
@@ -439,60 +498,6 @@
     <a class="nav-link" href="troubleshooting.html#objectives">Topic Objectives</a>
   </li>
 </ul>
-  </li>
-</ul>
-  </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="0">
-<ul class="nav-list">
-  <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="#clusterDomains.adoc">xx. Handling Cluster Domains</a>
-  </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="0">
-<ul class="nav-list">
-  <li class="nav-item" data-depth="1">
-    <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="multisource.html">xx. Multi Source Patterns</a>
-<ul class="nav-list">
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="multisource.html#objectives">Topic Objectives</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="multisource.html#meaning">What does it mean to use multisource?</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="multisource.html#how">How it works</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="multisource.html#status">Current Status</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="multisource.html#ux">User Experience</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="multisource.html#helmRepo">Helm Chart Repository</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="multisource.html#chart-release">Creating a chart release</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="multisource.html#next">Next Steps</a>
-  </li>
-</ul>
-  </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="0">
-<ul class="nav-list">
-  <li class="nav-item" data-depth="1">
-    <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="#imperative.adoc">xx. Imperative Framework</a>
-<ul class="nav-list">
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="#imperative.adoc#objectives">Topic Objectives</a>
   </li>
 </ul>
   </li>
@@ -527,6 +532,7 @@
 <nav class="breadcrumbs" aria-label="breadcrumbs">
   <ul>
     <li><a href="index.html">Validated Patterns Workshop</a></li>
+    <li><a href="consumingPatterns.html">5. Validated Patterns</a></li>
     <li><a href="creatingPatterns.html">Creating a Validated Pattern</a></li>
   </ul>
 </nav>
