[CI] Publish Documentation for a33fe470b2b58fb5e2c515d96c09382f3f24ec4b - a33fe470b2b58fb5e2c515d96c09382f3f24ec4b 🚀

--- a/vp-workshop/main/gitopsRoughEdges.html
+++ b/vp-workshop/main/gitopsRoughEdges.html
@@ -607,7 +607,7 @@
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>kubernetes Jobs</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">A job creaes one or more pods and will continue to retry execution of the pods until a specified number of them successfully terminate</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">A job creates one or more pods and will continue to retry execution of the pods until a specified number of them successfully terminate</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>kubernetes cronJobs</code></p></td>
