--- a/vp-workshop/main/imperative.html
+++ b/vp-workshop/main/imperative.html
@@ -577,7 +577,7 @@
 <p>During the development of the imperative framework there as a realization that there was a generalized need to support a limited mechanism for running these imperative actions in the most declarative way possible.</p>
 </div>
 <div class="paragraph">
-<p>We needed an autoamted, self-contained and supportable mechanism to interact with elements of OpenShift that could not be predicted prior to installation.</p>
+<p>We needed an automated, self-contained and supportable mechanism to interact with elements of OpenShift that could not be predicted prior to installation.</p>
 </div>
 <div class="paragraph">
 <p>Some examples of when this is necessary:</p>
