[CI] Publish Documentation for 146cf06e1e25b77d40aea135b2913635834f41b7 - 146cf06e1e25b77d40aea135b2913635834f41b7 🚀

--- a/vp-workshop/main/secrets-loading.html
+++ b/vp-workshop/main/secrets-loading.html
@@ -624,12 +624,12 @@ Complete examples can be found <a href="https://github.com/validatedpatterns/com
 
 secrets:
   - name: config-demo
-	vaultPrefixes:
-	- global
-	fields:
-	- name: secret
-  	  onMissingValue: generate
-  	  vaultPolicy: validatedPatternDefaultPolicy</code></pre>
+    vaultPrefixes:
+    - global
+    fields:
+    - name: secret
+      onMissingValue: generate
+      vaultPolicy: validatedPatternDefaultPolicy</code></pre>
 </div>
 </div>
 <div class="exampleblock IMPORTANT">
@@ -651,23 +651,21 @@ secrets:
 </div>
 <div class="sect2">
 <h3 id="secretexamples"><a class="anchor" href="#secretexamples"></a>Secret Examples</h3>
-<div id="certificate" class="exampleblock">
+<div id="certificate" class="listingblock">
 <div class="content">
-<div class="paragraph">
-<p>version: "2.0"
+<pre class="highlightjs highlight"><code class="language-yaml hljs" data-lang="yaml">version: "2.0"
 secrets:
   - name: config-demo
-	vaultMount: secret
-	vaultPrefixes:
-	- region-one
-	- snowflake
-	fields:
-	- name: secretfile
-    	  path: /tmp/ca.crt
-  	  onMissingValue: prompt
-	  base64: true
-  	  prompt: "Insert path to Certificate Authority"</p>
-</div>
+    vaultMount: secret
+    vaultPrefixes:
+    - region-one
+    - snowflake
+    fields:
+    - name: secretfile
+      path: /tmp/ca.crt
+      onMissingValue: prompt
+      base64: true
+      prompt: "Insert path to Certificate Authority"</code></pre>
 </div>
 </div>
 <div class="paragraph">
@@ -697,23 +695,20 @@ secrets:
 </li>
 </ul>
 </div>
-<div id="awscreds" class="exampleblock">
+<div id="awscreds" class="listingblock">
 <div class="content">
-<div class="paragraph">
-<p>version: "2.0"</p>
-</div>
-<div class="paragraph">
-<p>secrets:
+<pre class="highlightjs highlight"><code class="language-yaml hljs" data-lang="yaml">version: "2.0"
+
+secrets:
   - name: aws
     fields:
     - name: aws_access_key_id
-  	 ini_file: ~/.aws/credentials
-  	 ini_section: default
-   	 ini_key: aws_access_key_id
+      ini_file: ~/.aws/credentials
+      ini_section: default
+      ini_key: aws_access_key_id
     - name: aws_secret_access_key
-  	 ini_file: ~/.aws/credentials
-  	 ini_key: aws_secret_access_key</p>
-</div>
+      ini_file: ~/.aws/credentials
+      ini_key: aws_secret_access_key</code></pre>
 </div>
 </div>
 <div class="paragraph">
