[CI] Publish Documentation for 048335e3ab92a5f52dca77dd6088c3d5b3eeba60 - 048335e3ab92a5f52dca77dd6088c3d5b3eeba60 🚀

--- a/vp-workshop/main/secrets-loading.html
+++ b/vp-workshop/main/secrets-loading.html
@@ -645,6 +645,9 @@ secrets:
 <li>
 <p>The secret is 20 character longs (min 1 lowercase, min 1 uppercase, min 1 number, min 1 special char)</p>
 </li>
+<li>
+<p>It is possible to create a custom policy and use that one to generate secrets randomly</p>
+</li>
 </ul>
 </div>
 </div>
@@ -708,11 +711,37 @@ secrets:
       ini_key: aws_access_key_id
     - name: aws_secret_access_key
       ini_file: ~/.aws/credentials
+      ini_section: default
       ini_key: aws_secret_access_key</code></pre>
 </div>
 </div>
 <div class="paragraph">
-<p>This reads ~/.aws/credentials and uses the ‘[default]’ section to look for the aws_access_key_id and aws_secret_access_key in the file</p>
+<p>This reads <code>~/.aws/credentials</code> and uses the <code>[default]</code> section to look for the <code>aws_access_key_id</code> and <code>aws_secret_access_key</code> in the file</p>
+</div>
+<div id="custompolicy" class="listingblock">
+<div class="content">
+<pre class="highlightjs highlight"><code class="language-yaml hljs" data-lang="yaml">version: "2.0"
+vaultPolicies:
+  basicPolicy: |
+    length=10
+    rule "charset" { charset = "abcdefghijklmnopqrstuvwxyz" min-chars = 1 }
+    rule "charset" { charset = "ABCDEFGHIJKLMNOPQRSTUVWXYZ" min-chars = 1 }
+    rule "charset" { charset = "0123456789" min-chars = 1 }
+secrets:
+  - name: config-demo
+    vaultPrefixes:
+    - region-one
+    fields:
+    - name: secret
+      onMissingValue: generate # One of: error,generate,prompt (generate is only valid for normal secrets)
+      # This override attribute is false by default. The attribute is only valid with 'generate'. If the secret already exists in the
+      # vault it won't be changed unless override is set to true
+      override: true
+      vaultPolicy: basicPolicy</code></pre>
+</div>
+</div>
+<div class="paragraph">
+<p>This will use the <code>basicPolicy</code> to generate a random value as an attribute called <code>secret</code> in the <code>secret/region-one/config-demo</code> vault path</p>
 </div>
 </div>
 </div>
