[CI] Publish Documentation for 15d8d9278c54fa02ec26b0544cd87220042ecac8 - 15d8d9278c54fa02ec26b0544cd87220042ecac8 🚀

--- a/vp-workshop/main/multisource.html
+++ b/vp-workshop/main/multisource.html
@@ -720,7 +720,7 @@ Yes, you can change the default VP repository
 <p>If any commit changes one of the charts (except <code>operator-install</code>) the corresponding branch in common for that chart will be updated (<code>git subtree split</code>)</p>
 </li>
 <li>
-<p>This makes it so that the <strong><a href="https://github.com/validatedpatterns/common/tree/hashicorp-vault-main-single-chart">hashicorp-vault-main-single-chart</a></strong> branch only contains the code for the hashicrop-vault chart</p>
+<p>This makes it so that the <strong><a href="https://github.com/validatedpatterns/common/tree/hashicorp-vault-main-single-chart">hashicorp-vault-main-single-chart</a></strong> branch only contains the code for the hashicorp-vault chart</p>
 </li>
 <li>
 <p>Then it takes that hashicorp-vault-main-single-chart branch and pushes it out to the <code>validatedpatterns/hashicorp-vault</code> git repository</p>
