--- a/vp-workshop/main/secrets.html
+++ b/vp-workshop/main/secrets.html
@@ -599,7 +599,7 @@
 <p>GitOps’ entire premise is to use Git as the source of truth for infrastructure and application configuration</p>
 </li>
 <li>
-<p>Automation is in place (ArgoCD) to translate Git’s source of truth into infrastructure applications inside OpenShift</p>
+<p>Automation is in place (ArgoCD) to translate Git&#8217;s source of truth into infrastructure applications inside OpenShift</p>
 </li>
 <li>
 <p>Storing confidential data (passwords, private keys, secrets, authentication tokens, …) in Git is fundamentally a security vulnerability and should be avoided (even if the Git repository is private and access control is in place)</p>
