--- a/vp-workshop/main/clusterDomains.html
+++ b/vp-workshop/main/clusterDomains.html
@@ -568,7 +568,7 @@
 <p>By default ArgoCD does not expose any means to know the cluster&#8217;s name/FQDN (Fully Qualified Domain Name)</p>
 </div>
 <div class="paragraph">
-<p>To make up for this the framework collects some cluster information in order to provide resuable parameters for cluster specific values.</p>
+<p>To make up for this the framework collects some cluster information in order to provide reusable parameters for cluster specific values.</p>
 </div>
 </div>
 <div class="sect2">
