[CI] Publish Documentation for 18ad35332e294f39fb8b525c8146ddb1bb932583 - 18ad35332e294f39fb8b525c8146ddb1bb932583 🚀

--- a/vp-workshop/main/index.html
+++ b/vp-workshop/main/index.html
@@ -405,7 +405,7 @@
     <a class="nav-link" href="multipleClusters.html#objectives">Topic Objectives</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="multipleClusters.html">multipleClusters.adoc</a>
+    <a class="nav-link" href="multipleClusters.html#why">Why manage multiple clusters</a>
   </li>
 </ul>
   </li>
@@ -477,24 +477,6 @@
   </li>
   <li class="nav-item" data-depth="3">
     <a class="nav-link" href="multisource.html#next">Next Steps</a>
-  </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="helm.html">Helm for Fun and Profit</a>
-<ul class="nav-list">
-  <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="helm.html#objectives">Topic Objectives</a>
-  </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="troubleshooting.html">Troubleshooting</a>
-<ul class="nav-list">
-  <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="troubleshooting.html#objectives">Topic Objectives</a>
   </li>
 </ul>
   </li>
