--- a/vp-workshop/main/multipleClusters.html
+++ b/vp-workshop/main/multipleClusters.html
@@ -405,8 +405,8 @@
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="#objectives">Topic Objectives</a>
   </li>
-  <li class="nav-item is-current-page" data-depth="2">
-    <a class="nav-link" href="multipleClusters.html">multipleClusters.adoc</a>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="#why">Why manage multiple clusters</a>
   </li>
 </ul>
   </li>
@@ -481,24 +481,6 @@
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="2">
-    <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="helm.html">Helm for Fun and Profit</a>
-<ul class="nav-list">
-  <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="helm.html#objectives">Topic Objectives</a>
-  </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="troubleshooting.html">Troubleshooting</a>
-<ul class="nav-list">
-  <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="troubleshooting.html#objectives">Topic Objectives</a>
-  </li>
-</ul>
-  </li>
 </ul>
   </li>
 </ul>
@@ -550,6 +532,36 @@
 <div class="sectionbody">
 <div id="objectives" class="paragraph">
 <p>In this topic we will discuss:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Why manage multiple clusters</p>
+</li>
+<li>
+<p>Red Hat Advanced Cluster Management for Kubernetes Basics</p>
+</li>
+<li>
+<p>Managed Cluster Groups</p>
+</li>
+<li>
+<p>Other Considerations</p>
+</li>
+</ul>
+</div>
+<div class="sect2">
+<h3 id="why"><a class="anchor" href="#why"></a>Why manage multiple clusters</h3>
+
+</div>
+<div class="sect2">
+<h3 id="_kubernetes_adoption_leads_to_multicluster"><a class="anchor" href="#_kubernetes_adoption_leads_to_multicluster"></a>Kubernetes adoption leads to multicluster</h3>
+<div class="exampleblock INFORMATION">
+<div class="content">
+<div class="paragraph">
+<p>“As Kubernetes gains adoption across the industry, scenarios are arising in which I&amp;O teams are finding they must deploy and manage multiple clusters, either in a single region on-premises or in the cloud, or across multiple regions….for a number of reasons, including multi-tenancy, disaster recovery, and with hybrid, multicloud, or edge deployments.”</p>
+</div>
+</div>
+</div>
 </div>
 </div>
 </div>
