[CI] Publish Documentation for ea9aab63e035685b4e9121875a6f7c574c7bacf9 - ea9aab63e035685b4e9121875a6f7c574c7bacf9 🚀

--- a/404.html
+++ b/404.html
@@ -25,12 +25,22 @@
     <div id="topbar-nav" class="navbar-menu">
       <div class="navbar-end">
         <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link" href="#">Patterns</a>
+          <div class="navbar-dropdown">
+          <a class="navbar-item" target="_blank" href="https:validatedpatterns.io/">Validated Patterns Home</a>
+          <a class="navbar-item" target="_blank" href="https:validatedpatterns.io/ci">Status</a>
+          <a class="navbar-item" target="_blank" href="https:validatedpatterns.io/blog">Blog</a>
+        </div>
+          </div>
+
+
+        <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="#">Workshops</a>
           <div class="navbar-dropdown">
           <a class="navbar-item" target="_blank" href="https://openshiftdemos.github.io/openshift-gitops-workshop">OpenShift GitOps Workshop</a>
           <a class="navbar-item" target="_blank" href="https://openshiftdemos.github.io/argo-rollouts-workshop">Argo Rollouts Workshop</a>
-        </div>
           </div>
+        </div> 
 
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="#">Resources</a>
@@ -41,8 +51,6 @@
           </div>
         </div> 
 
-          <a class="navbar-item" target="_blank" href="https:validatedpatterns.io/ci">Status</a>
-          <a class="navbar-item" target="_blank" href="https:validatedpatterns.io/blog">Blog</a>
       </div>
     </div>
   </nav>
