--- a/vp-workshop/main/multisource.html
+++ b/vp-workshop/main/multisource.html
@@ -247,9 +247,6 @@
   <li class="nav-item" data-depth="3">
     <a class="nav-link" href="creatingPatterns.html#creating">Creation Process</a>
   </li>
-  <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="creatingPatterns.html#exercises">Exercises</a>
-  </li>
 </ul>
   </li>
 </ul>
@@ -299,9 +296,6 @@
     <a class="nav-link" href="secrets-loading.html#secretLoading">Secrets Loading</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="secrets-loading.html#valuesecret">Secrets Template in the Patterns</a>
-  </li>
-  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="secrets-loading.html#policy">Default Password Policy</a>
   </li>
   <li class="nav-item" data-depth="2">
@@ -315,9 +309,6 @@
     <a class="nav-link" href="secrets-loading.html#awscreds">Loading AWS Credentials</a>
   </li>
 </ul>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="secrets.html">Exercises</a>
   </li>
 </ul>
   </li>
@@ -337,9 +328,6 @@
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="selfContained.html#thoughts">Additional Thoughts</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="selfContained.html">Exercises</a>
   </li>
 </ul>
   </li>
@@ -396,9 +384,6 @@
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="gitopsRoughEdges.html">Exercises</a>
-  </li>
 </ul>
   </li>
 </ul>
@@ -414,6 +399,9 @@
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="multipleClusters.html#why">Why manage multiple clusters</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="multipleClusters.html#challenges">Multi-Cluster Challenges</a>
   </li>
 </ul>
   </li>
