--- a/vp-workshop/main/secrets.html
+++ b/vp-workshop/main/secrets.html
@@ -248,9 +248,6 @@
   <li class="nav-item" data-depth="3">
     <a class="nav-link" href="creatingPatterns.html#creating">Creation Process</a>
   </li>
-  <li class="nav-item" data-depth="3">
-    <a class="nav-link" href="creatingPatterns.html#exercises">Exercises</a>
-  </li>
 </ul>
   </li>
 </ul>
@@ -300,9 +297,6 @@
     <a class="nav-link" href="secrets-loading.html#secretLoading">Secrets Loading</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="secrets-loading.html#valuesecret">Secrets Template in the Patterns</a>
-  </li>
-  <li class="nav-item" data-depth="2">
     <a class="nav-link" href="secrets-loading.html#policy">Default Password Policy</a>
   </li>
   <li class="nav-item" data-depth="2">
@@ -316,9 +310,6 @@
     <a class="nav-link" href="secrets-loading.html#awscreds">Loading AWS Credentials</a>
   </li>
 </ul>
-  </li>
-  <li class="nav-item is-current-page" data-depth="2">
-    <a class="nav-link" href="secrets.html">Exercises</a>
   </li>
 </ul>
   </li>
@@ -338,9 +329,6 @@
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="selfContained.html#thoughts">Additional Thoughts</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="selfContained.html">Exercises</a>
   </li>
 </ul>
   </li>
@@ -397,9 +385,6 @@
   </li>
 </ul>
   </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="gitopsRoughEdges.html">Exercises</a>
-  </li>
 </ul>
   </li>
 </ul>
@@ -415,6 +400,9 @@
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="multipleClusters.html#why">Why manage multiple clusters</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="multipleClusters.html#challenges">Multi-Cluster Challenges</a>
   </li>
 </ul>
   </li>
